appId: xyz.ksharma.krail.debug
---
- launchApp:
    clearState: false
- waitForAnimationToEnd
- tapOn:
    point: "18%,19%"
- waitForAnimationToEnd
- assertVisible: "Delayed.*"
- tapOn: "Delayed.*"
- waitForAnimationToEnd
- assertVisible: "15 stops"
- assertVisible: "Delayed.*"
- takeScreenshot: store-listing/krail/screenshots/android_tablet/05_live_delays
