appId: xyz.ksharma.krail
---
- launchApp:
    clearState: false
- waitForAnimationToEnd
- tapOn: "Krail App"
- waitForAnimationToEnd
- assertVisible: "Location Permission Required"
- tapOn: "Location Permission Required"
- waitForAnimationToEnd
- assertNotVisible: "Location Permission Required"
